refactor and logging